kubernetes/Int/deployments/media/radarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: radarr
    namespace: media
spec:
    selector:
        app: radarr
    ports:
        - port: 7878
