kubernetes/Int/deployments/media/radarr/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: radarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:uLi9QS1Pi9R3jV5kfC7XSlvEnJGtlg==,iv:7jgGfKQ6arfMxrRqmQQumrZeYWQmtG6UQn+D2KjF1dQ=,tag:J4iYrmbEzNg5tzu7q1vIjg==,type:str]
          kind: Rule
          priority: 10
          middlewares:
            - name: forwardauth-authentik
              namespace: network
          services:
            - name: radarr
              port: 7878
        - match: ENC[AES256_GCM,data:/LBJBXT8+zo+Yv8q4L0tN2qDxkq1WG84yNi68Hh5xWhGkFJ4AfHhvQSGlcogfxvsx4TDQ2PKXgCC8kUarlKeC8Y=,iv:flh28jVEAjWCCKoCdqNE4TzNjaPSGIc/O2srpoEdfJQ=,tag:+9TLB7/ec3SgiT1uIYw9Ww==,type:str]
          kind: Rule
          priority: 15
          services:
            - name: radarr
              port: 7878
        - match: ENC[AES256_GCM,data:vdMWXcye3vPABnE8Jm6rX6Vre/b4g9sqHJY=,iv:Fro1cZye/VnZANGzlzWbQDaE4J441y9qJPtXkIzvT5g=,tag:w/0pCljF+/9I7Lt0zBT6jg==,type:str]
          kind: Rule
          services:
            - name: radarr
              port: 7878
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzRmkxd3dsVjgwajhVc1Z6
[...]
            rvUcmLaRthgKGb4ZWIEWqTc0n9pZp4JI3AKSz5Vn6ShpNMkRDn2xiA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-23T15:38:46Z"
    mac: ENC[AES256_GCM,data:OSO65GluBtIQU2vzJNBTP/clhGaTBI4AJF47LkrsjBbR3B7rIMhZqx9UHEkq93niN4FmmiYiGI5RfDI74Uwi8blN0nviqcbMp35udWfCauzA9tOZQTANIY8ypss5KkfHNgbn7YHqUomvsM0uO/ZMPgHmYqYPDVXfb3ietj0oAM8=,iv:6J5AbtCsih4G5C7KB0BJLWqs5KdyxNu8pjbf6uTfOAM=,tag:P75kzHOXcgckbV/AosePwg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
