kubernetes/Int/deployments/media/radarr/app/ingress.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#     name: radarr
#     namespace: media
#     annotations:
#         kubernetes.io/ingress.class: traefik
# spec:
#     entryPoints:
#         - websecure
#     routes:
#         - match: Host(`radarr.noms.tv`)
#           kind: Rule
#           priority: 10
#           middlewares:
#             - name: forwardauth-authentik
#               namespace: network
#           services:
#             - name: radarr
#               port: 7878
#         - match: Host(`radarr.noms.tv`) && PathPrefix(`/outpost.goauthentik.io/`)"
#           kind: Rule
#           priority: 15
#           services:
#             - name: radarr
#               port: 7878
#         - match: Host(`radarr.svc.noms.tv`)
#           kind: Rule
#           services:
#             - name: radarr
#               port: 7878
#     tls:
#         secretName: production-tls

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
  - "radarr.noms.tv"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
